<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/gender_default_value"
        android:title="@string/gender_title_label"
        android:entries="@array/gender_key"
        android:entryValues="@array/gender_value"
        android:key="gender_keys"
        android:summary="@string/gender_summary" />
    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/age_title"
        android:key="@string/age_key"
        android:summary="@string/age_summary" />
    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/height_title"
        android:key="@string/height_key"
        android:summary="@string/height_summary" />
    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/weight_label_title"
        android:key="@string/weight_key"
        android:summary="@string/weight_description" />
    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/weight_goal_title"
        android:key="@string/weight_goal_key"
        android:summary="@string/weight_goal_summary" />
    <ListPreference
        android:defaultValue="0"
        android:title="@string/lifestyle_title"
        android:entries="@array/activity_key"
        android:entryValues="@array/activity_value"
        android:key="lifestyle_key"
        android:summary="@string/lifestyle_summary" />
</PreferenceScreen>