<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_add_food"
            android:icon="@drawable/ic_food"
            android:title="@string/add_food" />
        <item
            android:id="@+id/nav_weight_log"
            android:icon="@drawable/ic_scale_bathroom"
            android:title="@string/weight_log" />
        <item
            android:id="@+id/nav_workout_schedule"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/workout_schedule" />
        <item
            android:id="@+id/nav_progress_gallary"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/progress_gallary" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
