<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.stclaircollege.fitgrind.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginBottom="@dimen/cardview_margin"
                card_view:cardElevation="@dimen/elevation"
                card_view:contentPadding="@dimen/padding">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/results_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/resultsTitle"
                        android:textAlignment="center"
                        android:textStyle="normal|bold"
                        android:textSize="24sp" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:columnCount="3">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:layout_columnWeight="1">

                            <TextView
                                android:text="TextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/currentDate"
                                android:layout_weight="1" />

                            <TextView
                                android:text="@string/not_logged"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/lastLoggedCalories"
                                android:layout_weight="1" />

                            <TextView
                                android:text="@string/not_logged"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/lastLoggedWeight"
                                android:layout_weight="1" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:layout_columnWeight="1">

                            <TextView
                                android:text="TextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/calories_goal"
                                android:textAlignment="center" />

                            <TextView
                                android:text="@string/calorie_goal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/calories_goal_title"
                                android:textAlignment="center"
                                android:textStyle="normal|bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:layout_columnWeight="1">

                            <TextView
                                android:text="TextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/weight_goal"
                                android:textAlignment="center" />

                            <TextView
                                android:text="@string/weight_goal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/weight_goal_title"
                                android:textAlignment="center"
                                android:textStyle="normal|bold" />
                        </LinearLayout>
                    </GridLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calorie_listview" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add_black_24dp"
        android:id="@+id/fab"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin" />


</RelativeLayout>
